# htp-platform

./: .dockerignore  .gitignore  .gitmodules  Makefile  README.md  app.mk  app_makefile  cpp.mk  cpp_makefile  go.mod  go.sum
.github/: dependabot.yml
.github/workflows/: code_ql_analysis.yml  docker-publish.yml  registry.json  repo-setting.json
api/capture/service/v1/: capture.pb.go  capture.proto  capture.swagger.json  capture_error.pb.go  capture_error.proto  capture_error.swagger.json  capture_error_errors.pb.go  capture_grpc.pb.go
api/capture/service/v1/cpp/: capture.grpc.pb.cc  capture.grpc.pb.h  capture.pb.cc  capture.pb.h
api/cv/service/v1/: cv.pb.go  cv.proto  cv.swagger.json  cv_error.pb.go  cv_error.proto  cv_error.swagger.json  cv_error_errors.pb.go  cv_grpc.pb.go
api/htpp/interface/v1/: interface.pb.go  interface.proto  interface.swagger.json  interface_error.pb.go  interface_error.proto  interface_error.swagger.json  interface_error_errors.pb.go  interface_grpc.pb.go  interface_http.pb.go
api/htpp/interface/v1/cpp/: interface.grpc.pb.cc  interface.grpc.pb.h  interface.pb.cc  interface.pb.h
api/interface/service/v1/: interface.pb.go  interface.pb.gw.go  interface.proto  interface.swagger.json  interface_grpc.pb.go  interface_http.pb.go
api/machine/robot/v1/: robot.grpc.pb.cc  robot.grpc.pb.h  robot.pb.cc  robot.pb.go  robot.pb.h  robot.proto  robot.swagger.json  robot_grpc.pb.go
api/machine/robot/v1/cpp/: robot.grpc.pb.cc  robot.grpc.pb.h  robot.pb.cc  robot.pb.h
api/machine/service/v1/: machine.pb.go  machine.proto  machine.swagger.json  machine_error.pb.go  machine_error.proto  machine_error.swagger.json  machine_error_errors.pb.go  machine_grpc.pb.go  response.pb.go  response.proto  response.swagger.json  response_grpc.pb.go
api/machine/service/v1/cpp/: machine.grpc.pb.cc  machine.grpc.pb.h  machine.pb.cc  machine.pb.h
api/user/service/v1/: user.pb.go  user.proto  user.swagger.json  user_error.pb.go  user_error.proto  user_error_errors.pb.go  user_grpc.pb.go
api/user/service/v1/cpp/: user.grpc.pb.cc  user.grpc.pb.h  user.pb.cc  user.pb.h
app/capture/service/: Dockerfile  go.mod  go.sum
app/capture/service/cmd/server/: main.go  wire.go  wire_gen.go
app/capture/service/configs/: config.yaml
app/capture/service/internal/biz/: biz.go  (+1 more)
app/htpp/interface/: go.mod  go.sum
app/htpp/interface/configs/: config.yaml
app/interface/service/configs/: config.yaml
app/machine/robot/: CMakeLists.txt  Dockerfile  Makefile  README.md  cal_len.cc  cal_len.h  controller.cc  controller.h  gen_grpc.sh  main.cc
app/machine/robot/configs/: basic_setting.json  config.json  plat_info.json  robot.json  serial_port_config.json  url_config.json
app/machine/robot/include/conf/: conf.pb.cc  conf.pb.h  conf.proto  config.h
app/machine/robot/include/robot/: cal_len.cc  cal_len.h  controller.cc  controller.h  robot.h
app/machine/robot/include/robot/data/motor/config/: path.h  status_reg.h
app/machine/robot/include/robot/internal/data/grpc/: move_done_client.cc  move_done_client.h
app/machine/robot/include/robot/internal/data/motor/: motor.cc  motor.h  motor_serial_comm.cc  motor_serial_comm.h
app/machine/robot/include/robot/internal/data/motor/serial/: serial.cc  serial.h
app/machine/robot/include/robot/internal/server/: robot_server.cc  robot_server.h
app/machine/robot/include/robot/internal/service/: move_done_req.h  robot_impl.cc  robot_impl.h
app/machine/robot/include/robot/internal/utils/: get_cred.cc  logger.cc  logger.h  timestamp.h  x_thread.cc  x_thread.h
app/machine/robot/include/robot/utils/: get_cred.h  logger.h  timestamp.h  x_thread.h
app/machine/robot/include/strace/: stack_trace.h  strace.h
app/machine/robot/internal/conf/: basic_setting.h  config.cc  config.h
app/machine/robot/internal/data/grpc/: move_done_client.h
app/machine/robot/internal/data/motor/: motor.cc  motor.h  motor_serial_comm.cc  motor_serial_comm.h
app/machine/robot/internal/data/motor/get_config/: get_setting.cc  get_setting.h
app/machine/robot/internal/data/motor/motor_config/: motor_path.h  motor_status_reg.h
app/machine/robot/internal/data/motor/serial/: serial.cc  serial.h
app/machine/robot/internal/server/: robot_server.cc  robot_server.h
app/machine/robot/internal/service/: move_done_req.h  robot_impl.cc  robot_impl.h
app/machine/robot/internal/utils/: get_cred.cc  get_cred.h  x_thread.h
app/machine/robot/robot/: cal_len.cc  cal_len.h  controller.cc  controller.h
app/machine/robot/robot/internal/conf/: basic_setting.h  config.h
app/machine/robot/robot/internal/data/grpc/: move_done_client.h
app/machine/robot/robot/internal/data/motor/: motor.cc  motor.h  motor_serial_comm.cc  motor_serial_comm.h
app/machine/robot/robot/internal/data/motor/get_config/: get_setting.h
app/machine/robot/robot/internal/data/motor/motor_config/: motor_path.h  motor_status_reg.h
app/machine/robot/robot/internal/data/motor/serial/: serial.h
app/machine/robot/robot/internal/server/: robot_server.cc  robot_server.h
app/machine/robot/robot/internal/service/: robot_impl.cc  robot_impl.h
app/machine/robot/robot/internal/utils/: get_cred.h  x_thread.h
app/machine/robot/src/: CMakeLists.txt  cal_len.cc  cal_len.h  controller.cc  controller.h  get_cred.cc  logger.cc  main.cc  motor.cc  motor.h  motor_serial_comm.cc  motor_serial_comm.h  move_done_client.cc  move_done_client.h  move_done_req.h  robot_impl.cc  robot_impl.h  robot_server.cc  robot_server.h  serial.cc  serial.h  x_thread.cc
app/machine/robot/src/conf/: buf.conf.gen.yaml  conf.pb.cc  conf.pb.h  config.h
app/machine/robot/src/strace/: get_m_context_addr.cc  get_m_context_addr.h  stack_trace.cc
app/machine/service/: go.mod  go.sum
app/machine/service/configs/: config.yaml  registry.yaml
app/user/service/: Dockerfile  go.mod  go.sum
app/user/service/configs/: registry.yaml
deploy/consul/: docker-compose.yaml
deploy/docker-compose/: docker-bake.hcl  docker-compose.yaml
docs/: README.md  _sidebar.md  api.html  index.html
pkg/: hash.go
pkg/hash/: hash.go
(+156 files in other folders)
